# dql

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  (+6 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
docs/: 01-quickstart.md  02-concepts.md  03-install.md  04-dql-in-5-concepts.md  90-DAY-PROMOTION-PLAN.md  OSS-PROMOTION-PLAN.md  PLATFORM-STORY-BLURBS.md  README.md  agentic-answer-flow.md  authoring-blocks.md  cli-reference.md  compatibility.md  data-sources.md  datalex-and-dql.md  dql-language-reference.md  dql-language-spec.md  enterprise-getting-started.md  examples.md  faq.md  getting-started.md  index.md  lineage.md  notebook.md  oss-readiness-checklist.md  project-config.md  project-structure.md  publishing.md  quickstart.md  repo-testing.md  semantic-layer-guide.md  use-cases.md  v1-support-scope.md  why-dql.md
examples/: 01-revenue-by-region.dql  02-monthly-trend.dql  03-product-mix.dql  04-scatter.dql  README.md
my-dql-project/: .gitignore  README.md  dql.config.json
packaging/: README.md
scripts/: bootstrap-jaffle-shop-sample.mjs  check-doc-links.mjs  check-no-workspace-deps.mjs  docker-entrypoint.sh  release-packages.mjs  seed-eval-warehouse.mjs  smoke-cli-install.mjs
templates/: dql.config.reference.json
(+751 files in other folders)
